k8s/pihole/k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
        name: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:latest
        imagePullPolicy: Always
        securityContext:
          runAsUser: 1000
          fsGroup: 1000
        volumeMounts:
        - name: pihole-nfs-etc-volume
          mountPath: "/etc/pihole"
        - name: pihole-nfs-dnsmasq-volume
          mountPath: "/etc/dnsmasq.d"
      volumes:
      - name: pihole-nfs-etc-volume
        persistentVolumeClaim:
          claimName: pihole-nfs-etc-claim
      - name: pihole-nfs-dnsmasq-volume
        persistentVolumeClaim:
          claimName: pihole-nfs-dnsmasq-claim
