k8s/pihole/k8s/pihole-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pihole-ingress
spec:
  rules:
  - host: pihole.home
    http:
      paths:
      - path: /
        backend:
          serviceName: pihole-svc
          servicePort: 8000
